fix align checkBox in address form

--- a/form.css
+++ b/form.css
@@ -18,7 +18,16 @@ input, select {
     border-bottom: 1px solid #c9c9c9;
 }
 
-
+.checkbox{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.checkbox input{
+    width: 1rem;
+    margin-top: 0.3rem;
+    margin-right: 0.3rem;
+}
 .shipping-free input {
     width: 20px;
 }
